<resources>
    <string name="app_name">Tacos</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="label_product_type">product type</string>
    <string name="label_recipe">recipe</string>
    <string name="label_product_name">product name</string>
    <string name="label_product_ingredients">"ingredients: "</string>
    <string name="title_recipe">Recipe:</string>
    <string name="loading">loading…</string>
    <string name="product_type_base_layer">Base Layer</string>
    <string name="product_type_mixin">Mixin</string>
    <string name="product_type_condiment">Condiment</string>
    <string name="product_type_seasoning">Seasoning</string>
    <string name="product_type_shell">Shell</string>
    <string name="tacos_mixin_pretext">with</string>
    <string name="tacos_condiment_pretext">garnished with</string>
    <string name="tacos_seasoning_pretext">topped off with</string>
    <string name="tacos_shell_pretext">and wrapped in</string>
    <string name="label_get_random_taco">More tacos!</string>
    <string name="label_btn_to_taco_fragment">One taco, please</string>
    <string name="label_my_tacos">my tacos</string>
    <string name="title_taco_randomizer">Taco Randomizer</string>
    <string name="title_main">Tacos</string>
</resources>