<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:viewBindingIgnore="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/item_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_product_name"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/item_product_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_product_type"
                android:textAppearance="?attr/textAppearanceHeadline6" />
            <TextView
                android:id="@+id/item_product_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_recipe"
                android:textAppearance="?attr/textAppearanceHeadline6" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>